plugins {
    id 'java'
}

group = 'co.favelezr'
version = '1.0'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}